--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,10 +47,10 @@ body {
         transition: opacity 2.5s;
     }
     .art {
-        max-height: calc(100vh - 15vw);
-        max-width: 95vw;
+        width: 90vw;
+        height: 90vh;
         display: block;
-        width: auto;
+        background-size: cover;
     }
     .mat {
         z-index: 2;
