--- a/public/main.css
+++ b/public/main.css
@@ -60,7 +60,7 @@ body {
   height: 100%;
   display: block;
   position: absolute;
-  box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 0px 0px 11px 0px rgb(0, 0, 0);
 }
 
 @keyframes frameColor {
