--- a/public/main.css
+++ b/public/main.css
@@ -11,10 +11,9 @@ body {
 }
 
 #background {
-  background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(221, 221, 255) 44%, rgb(238, 238, 255) 88%);
   width: 100vw;
   height: 100vh;
-  opacity: 0.3;
+  opacity: 0.8;
   position: fixed;
   z-index: 1;
 }
@@ -28,6 +27,49 @@ body {
   z-index: 2;
 }
 
+.notification {
+  width: 10px;
+  left: 20px;
+  top: 20px;
+  height: 10px;
+  display: block;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 20;
+  animation: notify 3s linear normal;
+  animation-iteration-count: 1;
+}
+.notification.newArt {
+  background-color: rebeccapurple;
+}
+.notification.cachedArt {
+  background-color: lightgoldenrodyellow;
+}
+.notification.favoritedArt {
+  background-color: lightpink;
+}
+.notification.randomArt {
+  background-color: cornflowerblue;
+}
+
+@keyframes notify {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  5% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0);
+  }
+}
 .frame {
   z-index: 5;
   position: fixed;
@@ -60,15 +102,15 @@ body {
   height: 100%;
   display: block;
   position: absolute;
-  box-shadow: inset 0px 0px 11px 0px rgb(0, 0, 0);
+  box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 0.15);
 }
 
 @keyframes frameColor {
   0%, 49.9% {
-    background-color: #fff;
+    background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(221, 221, 255) 44%, rgb(238, 238, 255) 88%);
   }
   50.1%, 100% {
-    background-color: #000;
+    background: #000;
   }
 }
 .heart {
