--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,10 +10,9 @@ body {
 }
 
 #background {
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(221,221,255,1) 44%, rgba(238,238,255,1) 88%);
     width: 100vw;
     height: 100vh;
-    opacity: 0.3;
+    opacity: 0.8;
     position: fixed;
     z-index: 1;
 }
@@ -25,6 +24,50 @@ body {
     transform: translate(-50%, -50%);
     position: fixed;
     z-index: 2;
+}
+
+.notification {
+    width: 10px;
+    left: 20px;
+    top: 20px;
+    height: 10px;
+    display: block;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 20;
+    animation: notify 3s linear normal;
+    animation-iteration-count: 1;
+    &.newArt {
+        background-color: rebeccapurple;
+    }
+    &.cachedArt {
+        background-color: lightgoldenrodyellow;
+    }
+    &.favoritedArt {
+        background-color: lightpink;
+    }
+    &.randomArt {
+        background-color: cornflowerblue;
+    }
+}
+
+@keyframes notify {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    5% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    80% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0);
+    }
 }
 
 .frame {
@@ -58,16 +101,16 @@ body {
         height: 100%;
         display: block;
         position: absolute;
-        box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 1)
+        box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 0.15)
     }
 }
 
 @keyframes frameColor {
     0%, 49.9% {
-        background-color: #fff;
+       background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(221,221,255,1) 44%, rgba(238,238,255,1) 88%);
     }
     50.1%, 100% {
-        background-color: #000;
+        background: #000;
     }
 }
 
