--- a/public/main.css
+++ b/public/main.css
@@ -36,7 +36,7 @@ body {
   border-radius: 50%;
   position: fixed;
   z-index: 20;
-  animation: notify 3s linear normal;
+  animation: notify 4.5s linear normal;
   animation-iteration-count: 1;
 }
 .notification.newArt {
@@ -54,19 +54,21 @@ body {
 
 @keyframes notify {
   0% {
-    opacity: 0;
     transform: scale(0);
   }
   5% {
-    opacity: 1;
     transform: scale(1);
   }
-  80% {
-    opacity: 1;
+  50% {
     transform: scale(1);
+  }
+  65% {
+    transform: scale(1);
+  }
+  70% {
+    transform: scale(0);
   }
   100% {
-    opacity: 0;
     transform: scale(0);
   }
 }
