--- a/scss/main.scss
+++ b/scss/main.scss
@@ -116,18 +116,9 @@ body {
             overflow: hidden;
         }
         video {
-            animation: video 60s ease-in-out infinite alternate;
+            left: -20%;
             height: 90vh;
         }
-    }
-}
-
-@keyframes video {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-100% + 100vh));
     }
 }
 
