--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,170 +1,239 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
 body {
-    animation: frameColor 1860s linear infinite alternate;
+  animation: frameColor 1860s linear infinite alternate;
+  overflow: hidden;
 }
 
 #background {
-    width: 100vw;
-    height: 100vh;
-    opacity: 0.8;
-    position: fixed;
-    z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.8;
+  position: fixed;
+  z-index: 1;
 }
 
 #logo {
-    max-width: 30vw;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: fixed;
-    z-index: 2;
+  max-width: 30vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  z-index: 2;
 }
 
 .notification {
-    width: 10px;
-    left: 20px;
-    top: 20px;
-    height: 10px;
-    display: block;
-    border-radius: 50%;
-    position: fixed;
-    z-index: 20;
-    animation: notify 4.5s linear normal;
-    animation-iteration-count: 1;
-    &.newArt {
-        background-color: rebeccapurple;
-    }
-    &.cachedArt {
-        background-color: lightgoldenrodyellow;
-    }
-    &.favoritedArt {
-        background-color: lightpink;
-    }
-    &.randomArt {
-        background-color: cornflowerblue;
-    }
-    &.videos {
-        background-color: orange;
-    }
+  width: 10px;
+  left: 20px;
+  top: 20px;
+  height: 10px;
+  display: block;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 20;
+  animation: notify 4.5s linear normal;
+  animation-iteration-count: 1;
+  &.newArt {
+    background-color: rebeccapurple;
+  }
+  &.cachedArt {
+    background-color: lightgoldenrodyellow;
+  }
+  &.favoritedArt {
+    background-color: lightpink;
+  }
+  &.randomArt {
+    background-color: cornflowerblue;
+  }
+  &.videos {
+    background-color: orange;
+  }
 }
 
 @keyframes notify {
-    0% {
-        transform: scale(0);
-    }
-    5% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1);
-    }
-    65% {
-        transform: scale(1);
-    }
-    70% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(0);
-    }
+  0% {
+    transform: scale(0);
+  }
+  5% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  65% {
+    transform: scale(1);
+  }
+  70% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
 
 .frame {
-    z-index: 5;
-    position: fixed;
+  z-index: 5;
+  position: fixed;
+  padding: 5vh 5vw;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 50vh;
+  opacity: 1;
+  background: white;
+  display: block;
+  animation: frame 1860s linear infinite alternate;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.45);
+  &.fade-in {
+    opacity: 1;
+    transition: opacity 2.5s;
+  }
+  &.fade-out {
+    opacity: 0;
+    transition: opacity 2.5s;
+  }
+  .art {
+    width: 90vw;
+    height: 40vh;
+    display: block;
+    background-size: cover;
+  }
+  .mat {
+    z-index: 2;
+    width: 90vw;
+    height: 40vh;
     left: 5vw;
     top: 5vh;
-    opacity: 0;
-    background-size: contain;
     display: block;
-    background-position: center;
-    background-repeat: no-repeat;
-    &.fade-in {
-        opacity: 1;
-        transition: opacity 2.5s;
+    position: absolute;
+    box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 0.45);
+  }
+  &.video {
+    .container {
+      position: fixed;
+      width: 90vw;
+      height: 40vh;
+      z-index: -1;
+      overflow: hidden;
     }
-    &.fade-out {
-        opacity: 0;
-        transition: opacity 2.5s;
+    video {
+      left: -20%;
+      height: 40vh;
     }
-    .art {
-        width: 90vw;
-        height: 90vh;
-        display: block;
-        background-size: cover;
-    }
-    .mat {
-        z-index: 2;
-        width: 100%;
-        height: 100%;
-        display: block;
-        position: absolute;
-        box-shadow: inset 0px 0px 11px 0px rgba(0, 0, 0, 0.45)
-    }
-    &.video {
-        .container {
-            position: fixed;
-            width: 90vw;
-            height: 90vh;
-            z-index: -1;
-            overflow: hidden;
-        }
-        video {
-            left: -20%;
-            height: 90vh;
-        }
-    }
+  }
 }
 
 @keyframes frameColor {
-    0%, 49.9% {
-       background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(221,221,255,1) 44%, rgba(238,238,255,1) 88%);
-    }
-    50.1%, 100% {
-        background: #000;
-    }
+  0%,
+  49.9% {
+    background: radial-gradient(
+      circle,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(221, 221, 255, 1) 44%,
+      rgba(238, 238, 255, 1) 88%
+    );
+  }
+  50.1%,
+  100% {
+    background: #000;
+  }
 }
 
 .heart {
-    content: '❤️';
-    position: fixed;
-    top: 100%;
-    z-index: 10;
-    right: 80%;
-    font-size: 30px;
-    animation: heartBeat 3.5s ease-in-out;
+  content: "❤️";
+  position: fixed;
+  top: 100%;
+  z-index: 10;
+  right: 80%;
+  font-size: 30px;
+  animation: heartBeat 3.5s ease-in-out;
 }
 
 @keyframes heartBeat {
-    0% {
-        top: 100%;
-        right: 80%;
-        transform: scale(1);
-    }
-    30% {
-        right: 75%;
-        top: 94%;
-        transform: scale(1.2);
-    }
-    50%  {
-        top: 88%;
-        right: 80%;
-        opacity: 1;
-    }
-    70% {
-        top: 84%;
-        right:85%;
-    }
-    100% {
-        opacity: 0.1;
-        right: 80%;
-        top: 50%;
-        transform: scale(1);
-    }
+  0% {
+    top: 100%;
+    right: 80%;
+    transform: scale(1);
+  }
+  30% {
+    right: 75%;
+    top: 94%;
+    transform: scale(1.2);
+  }
+  50% {
+    top: 88%;
+    right: 80%;
+    opacity: 1;
+  }
+  70% {
+    top: 84%;
+    right: 85%;
+  }
+  100% {
+    opacity: 0.1;
+    right: 80%;
+    top: 50%;
+    transform: scale(1);
+  }
+}
+
+.tray {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-image: url(assets/desk2.jpg);
+  background-size: cover;
+  height: 50vh;
+  z-index: 0;
+  iframe {
+    position: absolute;
+    z-index: 2;
+  }
+  .news {
+    width: 900px;
+    height: 900px;
+    left: 415px;
+    top: -2vh;
+    transform: rotate(2deg);
+    z-index: 1;
+  }
+  .plex {
+    width: 640px;
+    height: 800px;
+    left: 10px;
+    transform: rotate(-3deg);
+    top: 5vh;
+  }
+}
+
+.tray.bottom {
+  top: 50%;
+  background-image: url(assets/desk2.jpg);
+  .plex {
+    left: 600px;
+    transform: rotate(3deg);
+    top: 0vh;
+  }
+  .news {
+    width: 527px;
+    left: 150px;
+    top: 4vh;
+    transform: rotate(-2deg);
+  }
+}
+
+@keyframes frame {
+  0%,
+  45% {
+    top: 0;
+  }
+  55%,
+  100% {
+    top: 50vh;
+  }
 }
