--- a/public/main.css
+++ b/public/main.css
@@ -90,6 +90,14 @@ body {
   transition: all 2.5s;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.45);
 }
+#container #status {
+  position: absolute;
+  left: -60px;
+  top: 5px;
+  height: 60px;
+  transform: scale(0.6);
+  width: 380px;
+}
 #container.bottom {
   transform: translateY(50vh);
   transition: all 2.5s;
